Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -108,6 +108,37 @@
     ]
   },
   {
+    "title": "Nữ sinh rối loạn tâm thần vì viêm não",
+    "content": "Một nữ sinh 14 tuổi đã gặp phải rối loạn tâm thần do viêm não tự miễn. Cô bé đã có những hành động bất thường như khóc cười một mình và nghe thấy tiếng nói lạ. Sau khi được khám và điều trị tại Bệnh viện Nhân dân Gia Định, tình trạng của bé đã cải thiện đáng kể. Viêm não tự miễn là một bệnh lý nghiêm trọng, thường gặp ở nữ giới trẻ tuổi và dễ bị nhầm lẫn với các rối loạn tâm thần khác.",
+    "link": "https://vnexpress.net/nu-sinh-roi-loan-tam-than-vi-viem-nao-4864392.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Nữ sinh bị rối loạn tâm thần vì nguyên nhân gì?",
+    "answers": [
+      {
+        "text": "Viêm não tự miễn",
+        "correct": true
+      },
+      {
+        "text": "Trầm cảm",
+        "correct": false
+      },
+      {
+        "text": "Lo âu",
+        "correct": false
+      },
+      {
+        "text": "Tâm thần phân liệt",
+        "correct": false
+      },
+      {
+        "text": "Rối loạn lo âu",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Argentina hạ Uruguay trong ngày vắng Messi",
     "content": "Argentina đã giành chiến thắng 1-0 trước Uruguay trên sân khách vào sáng 22/3, giúp họ tiến gần hơn đến cơ hội dự World Cup 2026. Thiago Almada là người ghi bàn quyết định ở phút 68, mặc dù đội bóng không có sự phục vụ của Messi và Lautaro Martinez do chấn thương. HLV Lionel Scaloni đã chỉ đạo các cầu thủ chơi phòng ngự phản công hiệu quả, tạo ra nhiều cơ hội trong trận đấu. Với chiến thắng này, Argentina đang dẫn đầu bảng vòng loại khu vực Nam Mỹ với 28 điểm.",
     "link": "https://vnexpress.net/argentina-ha-uruguay-trong-ngay-vang-messi-4864454.html",
@@ -165,6 +196,33 @@
       },
       {
         "text": "0 trận",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cách giảm nhiệt miệng cho trẻ",
+    "content": "Nhiệt miệng ở trẻ em là tình trạng xuất hiện các vết loét trong miệng, gây khó chịu và chán ăn. Để giảm nhiệt miệng, phụ huynh cần giữ vệ sinh răng miệng cho trẻ, cho trẻ ăn thực phẩm mát, đủ chất và uống đủ nước. Ngoài ra, việc hạn chế thức ăn chua cay, nóng cũng giúp ngăn ngừa tái phát. Nếu triệu chứng kéo dài hoặc kèm theo sốt cao, phụ huynh nên đưa trẻ đến bác sĩ để được tư vấn.",
+    "link": "https://vnexpress.net/cach-giam-nhiet-mieng-cho-tre-4864398.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Cách nào giúp giảm nhiệt miệng cho trẻ?",
+    "answers": [
+      {
+        "text": "Giữ vệ sinh răng miệng và ăn thực phẩm thanh mát",
+        "correct": true
+      },
+      {
+        "text": "Dùng thuốc bôi không cần tư vấn bác sĩ",
+        "correct": false
+      },
+      {
+        "text": "Cho trẻ ăn nhiều đồ ăn cay nóng",
+        "correct": false
+      },
+      {
+        "text": "Để trẻ thức khuya và vận động nhiều",
         "correct": false
       }
     ]
@@ -309,33 +367,6 @@
     ]
   },
   {
-    "title": "Viêm xoang có di truyền không?",
-    "content": "Viêm xoang không phải là bệnh di truyền, nhưng một số yếu tố di truyền có thể làm tăng nguy cơ mắc bệnh. Các biến thể trong gene như TAS2R38 và ALOX15 có thể ảnh hưởng đến khả năng bảo vệ của xoang mũi và dẫn đến viêm xoang. Mặc dù không di truyền, nhưng môi trường sống và thói quen sinh hoạt của gia đình cũng có thể tạo điều kiện cho bệnh phát triển. Bệnh viêm xoang có thể được điều trị bằng nhiều phương pháp khác nhau, bao gồm thuốc và can thiệp y tế nếu cần.",
-    "link": "https://vnexpress.net/viem-xoang-co-di-truyen-khong-4864247.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Viêm xoang có di truyền không?",
-    "answers": [
-      {
-        "text": "Không, viêm xoang không di truyền nhưng có thể có yếu tố di truyền liên quan.",
-        "correct": true
-      },
-      {
-        "text": "Có, viêm xoang là bệnh di truyền từ cha mẹ sang con.",
-        "correct": false
-      },
-      {
-        "text": "Có thể di truyền trong một số trường hợp hiếm.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ ở những người sống trong cùng một môi trường.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Dấu hiệu liệt dây thần kinh số 7",
     "content": "Liệt dây thần kinh số 7, hay còn gọi là liệt mặt, có thể biểu hiện qua các triệu chứng như tê nhẹ hoặc cứng một bên mặt, khó khăn khi cười, và miệng kéo lệch khi nói hoặc ăn. Dây thần kinh số 7 điều khiển các cử động cơ mặt và liên quan đến cảm giác vị giác, tiết nước bọt và nước mắt. Nếu phát hiện sớm, điều trị trong vòng 72 giờ có thể giúp phục hồi chức năng hoàn toàn và giảm nguy cơ biến chứng. Các nguyên nhân gây liệt bao gồm nhiễm lạnh, nhiễm virus, và các bệnh lý viêm nhiễm.",
     "link": "https://vnexpress.net/dau-hieu-liet-day-than-kinh-so-7-4864394.html",
@@ -362,6 +393,33 @@
       },
       {
         "text": "Đau bụng dưới",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Viêm xoang có di truyền không?",
+    "content": "Viêm xoang không phải là bệnh di truyền, nhưng một số yếu tố di truyền có thể làm tăng nguy cơ mắc bệnh. Các biến thể trong gene như TAS2R38 và ALOX15 có thể ảnh hưởng đến khả năng bảo vệ của xoang mũi và dẫn đến viêm xoang. Mặc dù không di truyền, nhưng môi trường sống và thói quen sinh hoạt của gia đình cũng có thể tạo điều kiện cho bệnh phát triển. Bệnh viêm xoang có thể được điều trị bằng nhiều phương pháp khác nhau, bao gồm thuốc và can thiệp y tế nếu cần.",
+    "link": "https://vnexpress.net/viem-xoang-co-di-truyen-khong-4864247.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Viêm xoang có di truyền không?",
+    "answers": [
+      {
+        "text": "Không, viêm xoang không di truyền nhưng có thể có yếu tố di truyền liên quan.",
+        "correct": true
+      },
+      {
+        "text": "Có, viêm xoang là bệnh di truyền từ cha mẹ sang con.",
+        "correct": false
+      },
+      {
+        "text": "Có thể di truyền trong một số trường hợp hiếm.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ ở những người sống trong cùng một môi trường.",
         "correct": false
       }
     ]
@@ -827,28 +885,32 @@
     ]
   },
   {
-    "title": "Lúa chết vì khô hạn, nông dân phải cắt cho bò ăn",
-    "content": "Khô hạn kéo dài tại Gia Lai đã khiến gần 50 ha lúa của người dân bị thiệt hại nặng nề, buộc họ phải cắt lúa để làm thức ăn cho bò. Ông Tônh và nhiều nông dân khác đang phải tìm cách cứu mùa màng bằng việc bơm nước từ giếng, nhưng nước ngày càng cạn kiệt. Tình trạng này không chỉ xảy ra ở Gia Lai mà còn lan rộng sang các tỉnh khác như Kon Tum, nơi khoảng 380 ha lúa và cây trồng khác cũng bị ảnh hưởng nghiêm trọng do thiếu nước tưới.",
-    "link": "https://vnexpress.net/lua-chet-vi-kho-han-nong-dan-phai-cat-cho-bo-an-4858759.html",
-    "cat": "thoi-su",
-    "positivity": 2,
-    "importance": 8,
-    "question": "Tại sao nông dân ở Gia Lai phải cắt lúa cho bò ăn?",
+    "title": "Triệu Lệ Dĩnh chấp nhận trở nên xấu xí để \"bước qua vùng an toàn\"",
+    "content": "Triệu Lệ Dĩnh đã chấp nhận thay đổi hình ảnh của mình bằng cách nhận vai diễn khó khăn trong bộ phim \"Hoa hướng dương\", nơi cô vào vai một nữ tù nhân tìm lại cuộc sống sau khi mãn hạn tù. Với tạo hình giản dị và gần gũi, cô quyết tâm phá bỏ hình ảnh hoàn hảo để thử thách bản thân trong diễn xuất. Nữ diễn viên đang nỗ lực khẳng định vị thế của mình trong làng giải trí và nhận được sự khen ngợi từ đạo diễn và khán giả. Phim dự kiến ra mắt vào ngày 4/4 tới.",
+    "link": "https://dantri.com.vn/giai-tri/trieu-le-dinh-chap-nhan-tro-nen-xau-xi-de-buoc-qua-vung-an-toan-20250321111238551.htm",
+    "cat": "giai-tri",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao Triệu Lệ Dĩnh quyết định trở nên xấu xí trong vai diễn mới?",
     "answers": [
       {
-        "text": "Do khô hạn khiến lúa chết",
+        "text": "Để thử thách bản thân và khẳng định diễn xuất.",
         "correct": true
       },
       {
-        "text": "Vì lúa bị sâu bệnh",
+        "text": "Để thu hút sự chú ý của khán giả.",
         "correct": false
       },
       {
-        "text": "Do thời tiết quá lạnh",
+        "text": "Để đổi mới phong cách cá nhân.",
         "correct": false
       },
       {
-        "text": "Vì không có giống lúa tốt",
+        "text": "Để hợp tác cùng với đạo diễn nổi tiếng.",
+        "correct": false
+      },
+      {
+        "text": "Để thể hiện sự tự tin hơn trong diễn xuất.",
         "correct": false
       }
     ]
@@ -908,37 +970,6 @@
     ]
   },
   {
-    "title": "Triệu Lệ Dĩnh chấp nhận trở nên xấu xí để \"bước qua vùng an toàn\"",
-    "content": "Triệu Lệ Dĩnh đã chấp nhận thay đổi hình ảnh của mình bằng cách nhận vai diễn khó khăn trong bộ phim \"Hoa hướng dương\", nơi cô vào vai một nữ tù nhân tìm lại cuộc sống sau khi mãn hạn tù. Với tạo hình giản dị và gần gũi, cô quyết tâm phá bỏ hình ảnh hoàn hảo để thử thách bản thân trong diễn xuất. Nữ diễn viên đang nỗ lực khẳng định vị thế của mình trong làng giải trí và nhận được sự khen ngợi từ đạo diễn và khán giả. Phim dự kiến ra mắt vào ngày 4/4 tới.",
-    "link": "https://dantri.com.vn/giai-tri/trieu-le-dinh-chap-nhan-tro-nen-xau-xi-de-buoc-qua-vung-an-toan-20250321111238551.htm",
-    "cat": "giai-tri",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao Triệu Lệ Dĩnh quyết định trở nên xấu xí trong vai diễn mới?",
-    "answers": [
-      {
-        "text": "Để thử thách bản thân và khẳng định diễn xuất.",
-        "correct": true
-      },
-      {
-        "text": "Để thu hút sự chú ý của khán giả.",
-        "correct": false
-      },
-      {
-        "text": "Để đổi mới phong cách cá nhân.",
-        "correct": false
-      },
-      {
-        "text": "Để hợp tác cùng với đạo diễn nổi tiếng.",
-        "correct": false
-      },
-      {
-        "text": "Để thể hiện sự tự tin hơn trong diễn xuất.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Xuyên đêm nấu ăn, khiêu vũ cùng người lạ",
     "content": "Bài viết giới thiệu về một không gian sinh hoạt chung mang tên The Airy Space ở Hà Nội, nơi mà những người trẻ có thể giao lưu, nấu ăn, khiêu vũ và chia sẻ với nhau. Mai Hoa, Triệu Vy và nhiều người khác đã tham gia các hoạt động này, tìm thấy cảm giác an toàn và thân thuộc mặc dù chưa quen biết nhau. Di Trần, người tổ chức, cho biết mục đích là tạo ra một nơi kết nối cho những ai cần giao lưu và giảm áp lực trong cuộc sống. Xu hướng này phản ánh nhu cầu giải tỏa cảm xúc và tìm kiếm sự đồng cảm trong xã hội hiện đại.",
     "link": "https://vnexpress.net/xuyen-dem-nau-an-khieu-vu-cung-nguoi-la-4863287.html",
@@ -965,6 +996,33 @@
       },
       {
         "text": "Chỉ dành cho những người lớn tuổi",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Lúa chết vì khô hạn, nông dân phải cắt cho bò ăn",
+    "content": "Khô hạn kéo dài tại Gia Lai đã khiến gần 50 ha lúa của người dân bị thiệt hại nặng nề, buộc họ phải cắt lúa để làm thức ăn cho bò. Ông Tônh và nhiều nông dân khác đang phải tìm cách cứu mùa màng bằng việc bơm nước từ giếng, nhưng nước ngày càng cạn kiệt. Tình trạng này không chỉ xảy ra ở Gia Lai mà còn lan rộng sang các tỉnh khác như Kon Tum, nơi khoảng 380 ha lúa và cây trồng khác cũng bị ảnh hưởng nghiêm trọng do thiếu nước tưới.",
+    "link": "https://vnexpress.net/lua-chet-vi-kho-han-nong-dan-phai-cat-cho-bo-an-4858759.html",
+    "cat": "thoi-su",
+    "positivity": 2,
+    "importance": 8,
+    "question": "Tại sao nông dân ở Gia Lai phải cắt lúa cho bò ăn?",
+    "answers": [
+      {
+        "text": "Do khô hạn khiến lúa chết",
+        "correct": true
+      },
+      {
+        "text": "Vì lúa bị sâu bệnh",
+        "correct": false
+      },
+      {
+        "text": "Do thời tiết quá lạnh",
+        "correct": false
+      },
+      {
+        "text": "Vì không có giống lúa tốt",
         "correct": false
       }
     ]
@@ -2512,33 +2570,6 @@
     ]
   },
   {
-    "title": "Bị ung thư phổi giai đoạn nào cần hóa trị?",
-    "content": "Ung thư phổi giai đoạn hai có thể được điều trị bằng hóa trị, tùy thuộc vào tình trạng sức khỏe tổng thể và đặc điểm khối u của bệnh nhân. Hóa trị có thể thực hiện trước hoặc sau phẫu thuật nhằm giảm kích thước khối u hoặc loại bỏ tế bào ung thư còn sót lại. Nếu bệnh ở giai đoạn tiến triển, hóa trị sẽ là phương pháp điều trị chính để giảm triệu chứng và kéo dài thời gian sống. Để có phác đồ điều trị chính xác, bệnh nhân cần được bác sĩ khám và xét nghiệm kỹ lưỡng.",
-    "link": "https://vnexpress.net/bi-ung-thu-phoi-giai-doan-nao-can-hoa-tri-4864117.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Bị ung thư phổi giai đoạn hai thì có cần hóa trị không?",
-    "answers": [
-      {
-        "text": "Có, thường cần hóa trị để hỗ trợ điều trị.",
-        "correct": true
-      },
-      {
-        "text": "Không, chỉ cần theo dõi triệu chứng.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ cần thuốc uống.",
-        "correct": false
-      },
-      {
-        "text": "Không cần hóa trị nếu không có triệu chứng.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "8 bước lên dây cót tinh thần trước ngày chạy giải",
     "content": "Bài viết hướng dẫn runner 8 bước chuẩn bị tinh thần trước ngày chạy giải, bao gồm việc đặt mục tiêu rõ ràng, công nhận tiến bộ, xác định ý nghĩa thành công và duy trì tư duy tích cực. Thời điểm 2-3 tuần trước ngày đua rất quan trọng, cần chú ý đến cả thể chất và tâm lý. Những mẹo hữu ích giúp runner tăng cường động lực và cải thiện hiệu suất trong cuộc đua sắp tới.",
     "link": "https://vnexpress.net/8-buoc-len-day-cot-tinh-than-truoc-ngay-chay-giai-4864017.html",
@@ -2561,6 +2592,33 @@
       },
       {
         "text": "Không cần lên kế hoạch tập luyện",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bị ung thư phổi giai đoạn nào cần hóa trị?",
+    "content": "Ung thư phổi giai đoạn hai có thể được điều trị bằng hóa trị, tùy thuộc vào tình trạng sức khỏe tổng thể và đặc điểm khối u của bệnh nhân. Hóa trị có thể thực hiện trước hoặc sau phẫu thuật nhằm giảm kích thước khối u hoặc loại bỏ tế bào ung thư còn sót lại. Nếu bệnh ở giai đoạn tiến triển, hóa trị sẽ là phương pháp điều trị chính để giảm triệu chứng và kéo dài thời gian sống. Để có phác đồ điều trị chính xác, bệnh nhân cần được bác sĩ khám và xét nghiệm kỹ lưỡng.",
+    "link": "https://vnexpress.net/bi-ung-thu-phoi-giai-doan-nao-can-hoa-tri-4864117.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Bị ung thư phổi giai đoạn hai thì có cần hóa trị không?",
+    "answers": [
+      {
+        "text": "Có, thường cần hóa trị để hỗ trợ điều trị.",
+        "correct": true
+      },
+      {
+        "text": "Không, chỉ cần theo dõi triệu chứng.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ cần thuốc uống.",
+        "correct": false
+      },
+      {
+        "text": "Không cần hóa trị nếu không có triệu chứng.",
         "correct": false
       }
     ]
@@ -4112,33 +4170,6 @@
     ]
   },
   {
-    "title": "5 cách bảo vệ thận",
-    "content": "Bài viết đề cập đến 5 cách bảo vệ thận, bao gồm việc uống đủ nước để loại bỏ độc tố, tránh uống rượu bia và thuốc lá, khám sức khỏe định kỳ, duy trì lối sống lành mạnh và hạn chế lượng muối tiêu thụ. Việc chăm sóc thận rất quan trọng để ngăn ngừa suy thận và các bệnh liên quan. Những biện pháp này giúp nâng cao sức khỏe thận và phòng ngừa các bệnh nghiêm trọng.",
-    "link": "https://vnexpress.net/5-cach-bao-ve-than-4864069.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Làm thế nào để bảo vệ sức khỏe thận hiệu quả?",
-    "answers": [
-      {
-        "text": "Uống đủ nước và không uống rượu bia.",
-        "correct": true
-      },
-      {
-        "text": "Tăng cường ăn mặn.",
-        "correct": false
-      },
-      {
-        "text": "Không cần kiểm tra sức khỏe định kỳ.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ cần tập thể dục một lần mỗi tháng.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "5 thực phẩm có thể khiến não nhanh lão hóa",
     "content": "Bài viết đề cập đến 5 loại thực phẩm có thể làm gia tăng tốc độ lão hóa của não, bao gồm thực phẩm chế biến sẵn, đường, chất béo bão hòa và carbohydrate tinh chế. Những thực phẩm này không chỉ làm suy yếu chức năng não mà còn gây viêm, rối loạn chức năng nhận thức. Các loại thịt đỏ và thịt chế biến cũng nằm trong danh sách, do chứa nhiều chất bảo quản và chất béo bão hòa. Cuối cùng, việc tiêu thụ rượu bia cũng được nhấn mạnh là có hại cho não và có thể làm giảm thể tích não.",
     "link": "https://vnexpress.net/5-thuc-pham-co-the-khien-nao-nhanh-lao-hoa-4864059.html",
@@ -4165,6 +4196,33 @@
       },
       {
         "text": "Thịt gà",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "5 cách bảo vệ thận",
+    "content": "Bài viết đề cập đến 5 cách bảo vệ thận, bao gồm việc uống đủ nước để loại bỏ độc tố, tránh uống rượu bia và thuốc lá, khám sức khỏe định kỳ, duy trì lối sống lành mạnh và hạn chế lượng muối tiêu thụ. Việc chăm sóc thận rất quan trọng để ngăn ngừa suy thận và các bệnh liên quan. Những biện pháp này giúp nâng cao sức khỏe thận và phòng ngừa các bệnh nghiêm trọng.",
+    "link": "https://vnexpress.net/5-cach-bao-ve-than-4864069.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Làm thế nào để bảo vệ sức khỏe thận hiệu quả?",
+    "answers": [
+      {
+        "text": "Uống đủ nước và không uống rượu bia.",
+        "correct": true
+      },
+      {
+        "text": "Tăng cường ăn mặn.",
+        "correct": false
+      },
+      {
+        "text": "Không cần kiểm tra sức khỏe định kỳ.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần tập thể dục một lần mỗi tháng.",
         "correct": false
       }
     ]
@@ -4837,33 +4895,6 @@
       },
       {
         "text": "Tăng chỉ tiêu xét tuyển sớm lên 30%.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Công viên ở Hà Nội được phá rào, chỉnh trang",
-    "content": "Công viên Thống Nhất tại Hà Nội đã bắt đầu quá trình cải tạo và phá dỡ hàng rào để tạo không gian mở cho người dân. Việc này diễn ra từ ngày 17/3, với hơn 650 m hàng rào được tháo dỡ nhằm không thu phí tham quan. Dự kiến, việc cải tạo công viên sẽ hoàn thành vào dịp 30/4 với tổng đầu tư hơn 14 tỷ đồng. Tương tự, công viên Cầu Giấy cũng đã hoàn tất việc phá dỡ hàng rào và sẽ được nâng cấp với nhiều tiện ích mới.",
-    "link": "https://vnexpress.net/cong-vien-o-ha-noi-duoc-pha-rao-chinh-trang-4863911.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Công viên nào ở Hà Nội đang được phá rào và chỉnh trang?",
-    "answers": [
-      {
-        "text": "Công viên Thống Nhất",
-        "correct": true
-      },
-      {
-        "text": "Công viên Hoàng Văn Thụ",
-        "correct": false
-      },
-      {
-        "text": "Công viên Cầu Giấy",
-        "correct": false
-      },
-      {
-        "text": "Công viên Bách Thảo",
         "correct": false
       }
     ]
