Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Đề xuất thí điểm Airbnb tại chung cư: Bên đồng tình, bên e ngại",
+    "content": "Đề xuất cho phép thí điểm mô hình Airbnb tại chung cư ở TP.HCM đã gây ra nhiều tranh luận trái chiều. Một số ý kiến đồng tình với việc quản lý tốt mô hình này để thúc đẩy kinh tế, trong khi nhiều người lo ngại về an ninh và sự ồn ào gây ra cho cư dân. Các ý kiến đều nhấn mạnh tầm quan trọng của việc có sự đồng thuận từ tất cả cư dân trước khi cho phép hoạt động kinh doanh trong chung cư.",
+    "link": "https://tuoitre.vn/de-xuat-thi-diem-airbnb-tai-chung-cu-ben-dong-tinh-ben-e-ngai-20250321230902944.htm",
+    "cat": "kinh-doanh",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Đề xuất thí điểm mô hình Airbnb tại chung cư TP.HCM nhận được phản hồi gì từ cư dân?",
+    "answers": [
+      {
+        "text": "Có nhiều ý kiến trái chiều với cả đồng tình và lo ngại.",
+        "correct": true
+      },
+      {
+        "text": "Tất cả cư dân đều đồng ý với đề xuất này.",
+        "correct": false
+      },
+      {
+        "text": "Không có ai đồng ý với đề xuất này.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ có ý kiến đồng tình mà không có ý kiến phản đối.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Công an Tây Ninh truy nã đặc biệt 3 người chặn đường cướp 2 triệu USD",
     "content": "Công an tỉnh Tây Ninh đã phát lệnh truy nã đặc biệt trên toàn quốc đối với ba nghi phạm liên quan đến vụ cướp tài sản lớn, ước tính lên đến 2 triệu USD. Ba người này đã bỏ trốn sau khi chặn đường và cướp tài sản của một cá nhân. Cơ quan điều tra đã khởi tố vụ án và kêu gọi người dân cung cấp thông tin về nghi phạm.",
     "link": "https://tuoitre.vn/cong-an-tay-ninh-truy-na-dac-biet-3-nguoi-chan-duong-cuop-2-trieu-usd-20250322094015552.htm",
@@ -524,6 +551,37 @@
       },
       {
         "text": "Tạo ra nhiều việc làm cho người dân",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đặt stent sau bao lâu thì ổn định?",
+    "content": "Sau khi đặt stent mạch vành, bệnh nhân thường cần nằm viện từ 2-3 ngày để theo dõi sức khỏe. Thời gian hồi phục có thể khoảng một tuần đối với trường hợp không khẩn cấp, nhưng nếu cần đặt stent ngay lập tức do nhồi máu cơ tim, có thể mất vài tuần đến hơn một tháng để bình phục hoàn toàn. Bệnh nhân cần tuân thủ chế độ dinh dưỡng và tránh hoạt động nặng để hồi phục nhanh chóng.",
+    "link": "https://vnexpress.net/dat-stent-sau-bao-lau-thi-on-dinh-4864401.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Sau bao lâu thì stent mạch vành ổn định và bệnh nhân có thể xuất viện?",
+    "answers": [
+      {
+        "text": "2-3 ngày",
+        "correct": true
+      },
+      {
+        "text": "1-2 ngày",
+        "correct": false
+      },
+      {
+        "text": "1 tháng",
+        "correct": false
+      },
+      {
+        "text": "1 tuần",
+        "correct": false
+      },
+      {
+        "text": "3 tháng",
         "correct": false
       }
     ]
@@ -2307,6 +2365,33 @@
     ]
   },
   {
+    "title": "Ngày mai diễn ra Ngày hội sáng tạo VF 3",
+    "content": "Ngày 22/3, VinFast sẽ tổ chức sự kiện \"Ngày hội sáng tạo VF 3\" tại ba địa điểm: Hà Nội, Quảng Nam và TP HCM. Sự kiện này nhằm trao giải cho các thiết kế xe sáng tạo, với gần 500 bài dự thi và tổng giá trị giải thưởng lên đến 650 triệu đồng. Ban giám khảo bao gồm nhiều chuyên gia và nghệ sĩ, sẽ lựa chọn các mẫu xe đại diện cho từng miền và trao các giải thưởng khác nhau cho những thiết kế xuất sắc.",
+    "link": "https://vnexpress.net/ngay-mai-dien-ra-ngay-hoi-sang-tao-vf-3-4864359.html",
+    "cat": "kinh-doanh",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Ngày hội sáng tạo VF 3 sẽ diễn ra vào ngày nào và ở đâu?",
+    "answers": [
+      {
+        "text": "Ngày 22/3 tại Hà Nội, Quảng Nam và TP HCM",
+        "correct": true
+      },
+      {
+        "text": "Ngày 21/3 tại Hà Nội và TP HCM",
+        "correct": false
+      },
+      {
+        "text": "Ngày 22/3 tại Hà Nội và Đà Nẵng",
+        "correct": false
+      },
+      {
+        "text": "Ngày 23/3 tại TP HCM và Quảng Nam",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nha khoa Nhân tâm khai trương chi nhánh quận 7",
     "content": "Nha khoa Nhân Tâm đã chính thức khai trương chi nhánh mới tại quận 7, TP HCM vào ngày 22/3/2025. Chi nhánh này được trang bị công nghệ hiện đại như hệ thống chụp CT Cone Beam 3D và kỹ thuật số trong chẩn đoán và điều trị. Nhân Tâm cũng triển khai nhiều ưu đãi hấp dẫn cho khách hàng trong dịp khai trương, bao gồm cơ hội trúng thưởng và quà tặng khi sử dụng dịch vụ.",
     "link": "https://vnexpress.net/nha-khoa-nhan-tam-khai-truong-chi-nhanh-quan-7-4864246.html",
@@ -2360,33 +2445,6 @@
       },
       {
         "text": "Số lượng tinh trùng nhiều",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Ngày mai diễn ra Ngày hội sáng tạo VF 3",
-    "content": "Ngày 22/3, VinFast sẽ tổ chức sự kiện \"Ngày hội sáng tạo VF 3\" tại ba địa điểm: Hà Nội, Quảng Nam và TP HCM. Sự kiện này nhằm trao giải cho các thiết kế xe sáng tạo, với gần 500 bài dự thi và tổng giá trị giải thưởng lên đến 650 triệu đồng. Ban giám khảo bao gồm nhiều chuyên gia và nghệ sĩ, sẽ lựa chọn các mẫu xe đại diện cho từng miền và trao các giải thưởng khác nhau cho những thiết kế xuất sắc.",
-    "link": "https://vnexpress.net/ngay-mai-dien-ra-ngay-hoi-sang-tao-vf-3-4864359.html",
-    "cat": "kinh-doanh",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Ngày hội sáng tạo VF 3 sẽ diễn ra vào ngày nào và ở đâu?",
-    "answers": [
-      {
-        "text": "Ngày 22/3 tại Hà Nội, Quảng Nam và TP HCM",
-        "correct": true
-      },
-      {
-        "text": "Ngày 21/3 tại Hà Nội và TP HCM",
-        "correct": false
-      },
-      {
-        "text": "Ngày 22/3 tại Hà Nội và Đà Nẵng",
-        "correct": false
-      },
-      {
-        "text": "Ngày 23/3 tại TP HCM và Quảng Nam",
         "correct": false
       }
     ]
@@ -2713,33 +2771,6 @@
     ]
   },
   {
-    "title": "Djokovic không ký tên trong đơn kiện ATP",
-    "content": "Novak Djokovic, mặc dù là đồng sáng lập Hiệp hội các tay vợt chuyên nghiệp (PTPA), đã không ký tên vào đơn kiện ATP về vấn đề tham nhũng. Trong khi nhiều tay vợt khác như Nick Kyrgios và Vasek Pospisil đã tham gia ký tên, Djokovic cho biết ông không đồng ý với một số nội dung trong hồ sơ kiện. Hành động này có thể được coi là chiến lược nhằm bảo vệ quyền lợi thi đấu của Djokovic trong ATP Tour, nhưng cũng làm giảm sức nặng của đơn kiện. PTPA đã đâm đơn kiện ATP và các tổ chức khác ở nhiều quốc gia, yêu cầu cải cách hệ thống quần vợt hiện tại.",
-    "link": "https://vnexpress.net/djokovic-khong-ky-ten-trong-don-kien-atp-4864260.html",
-    "cat": "the-thao",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Tại sao Djokovic không ký tên vào đơn kiện ATP?",
-    "answers": [
-      {
-        "text": "Để bảo vệ quyền lợi thi đấu của mình.",
-        "correct": true
-      },
-      {
-        "text": "Vì không đồng ý với nội dung kiện.",
-        "correct": false
-      },
-      {
-        "text": "Để thể hiện sự ủng hộ đối với ATP.",
-        "correct": false
-      },
-      {
-        "text": "Vì không muốn gây tranh cãi trong quần vợt.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bạn trẻ thích thú nhận quà tại gian hàng Việt Nam xanh",
     "content": "Vào sáng ngày 21-3, gian hàng chương trình Việt Nam Xanh tại Lễ hội Thanh niên TP.HCM thu hút sự tham gia của nhiều bạn trẻ. Tại đây, các bạn trẻ có cơ hội chơi game và làm khảo sát để nhận những phần quà hấp dẫn như ly uống nước, nón kết và các sản phẩm chăm sóc cá nhân. Gian hàng không chỉ mang đến niềm vui mà còn giới thiệu mục tiêu bảo vệ môi trường và phát triển bền vững của chương trình.",
     "link": "https://tuoitre.vn/ban-tre-thich-thu-nhan-qua-tai-gian-hang-viet-nam-xanh-20250321172330742.htm",
@@ -2762,6 +2793,33 @@
       },
       {
         "text": "Chỉ có diễn thuyết về môi trường",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Modric chỉ mặt, mắng Mbappe ăn vạ",
+    "content": "Trong trận đấu giữa Croatia và Pháp tại Nations League vào ngày 20/3, Luka Modric đã chỉ mặt và mắng đồng đội Kylian Mbappe sau tình huống Mbappe ngã trong vòng cấm. Modric tức giận vì nghĩ rằng Mbappe đã ăn vạ, mặc dù chỉ có một va chạm nhẹ. Tuy nhiên, cả hai cầu thủ đã làm hòa sau đó và cùng nhau ôm nhau. Croatia đã giành chiến thắng 2-0 trong trận này.",
+    "link": "https://vnexpress.net/modric-chi-mat-mang-mbappe-an-va-4864315.html",
+    "cat": "the-thao",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Tại sao Modric lại chỉ mặt và mắng Mbappe trong trận đấu giữa Croatia và Pháp?",
+    "answers": [
+      {
+        "text": "Vì Modric cho rằng Mbappe đã ăn vạ.",
+        "correct": true
+      },
+      {
+        "text": "Vì Modric không thích cách chơi của Mbappe.",
+        "correct": false
+      },
+      {
+        "text": "Vì Modric không hài lòng với trọng tài.",
+        "correct": false
+      },
+      {
+        "text": "Vì Modric muốn Mbappe cải thiện kỹ năng cá nhân.",
         "correct": false
       }
     ]
@@ -2794,28 +2852,28 @@
     ]
   },
   {
-    "title": "Modric chỉ mặt, mắng Mbappe ăn vạ",
-    "content": "Trong trận đấu giữa Croatia và Pháp tại Nations League vào ngày 20/3, Luka Modric đã chỉ mặt và mắng đồng đội Kylian Mbappe sau tình huống Mbappe ngã trong vòng cấm. Modric tức giận vì nghĩ rằng Mbappe đã ăn vạ, mặc dù chỉ có một va chạm nhẹ. Tuy nhiên, cả hai cầu thủ đã làm hòa sau đó và cùng nhau ôm nhau. Croatia đã giành chiến thắng 2-0 trong trận này.",
-    "link": "https://vnexpress.net/modric-chi-mat-mang-mbappe-an-va-4864315.html",
+    "title": "Djokovic không ký tên trong đơn kiện ATP",
+    "content": "Novak Djokovic, mặc dù là đồng sáng lập Hiệp hội các tay vợt chuyên nghiệp (PTPA), đã không ký tên vào đơn kiện ATP về vấn đề tham nhũng. Trong khi nhiều tay vợt khác như Nick Kyrgios và Vasek Pospisil đã tham gia ký tên, Djokovic cho biết ông không đồng ý với một số nội dung trong hồ sơ kiện. Hành động này có thể được coi là chiến lược nhằm bảo vệ quyền lợi thi đấu của Djokovic trong ATP Tour, nhưng cũng làm giảm sức nặng của đơn kiện. PTPA đã đâm đơn kiện ATP và các tổ chức khác ở nhiều quốc gia, yêu cầu cải cách hệ thống quần vợt hiện tại.",
+    "link": "https://vnexpress.net/djokovic-khong-ky-ten-trong-don-kien-atp-4864260.html",
     "cat": "the-thao",
     "positivity": 6,
     "importance": 7,
-    "question": "Tại sao Modric lại chỉ mặt và mắng Mbappe trong trận đấu giữa Croatia và Pháp?",
+    "question": "Tại sao Djokovic không ký tên vào đơn kiện ATP?",
     "answers": [
       {
-        "text": "Vì Modric cho rằng Mbappe đã ăn vạ.",
+        "text": "Để bảo vệ quyền lợi thi đấu của mình.",
         "correct": true
       },
       {
-        "text": "Vì Modric không thích cách chơi của Mbappe.",
+        "text": "Vì không đồng ý với nội dung kiện.",
         "correct": false
       },
       {
-        "text": "Vì Modric không hài lòng với trọng tài.",
+        "text": "Để thể hiện sự ủng hộ đối với ATP.",
         "correct": false
       },
       {
-        "text": "Vì Modric muốn Mbappe cải thiện kỹ năng cá nhân.",
+        "text": "Vì không muốn gây tranh cãi trong quần vợt.",
         "correct": false
       }
     ]
@@ -4757,6 +4815,33 @@
     ]
   },
   {
+    "title": "Hành trình Andreeva 'xé mác' thần đồng quần vợt",
+    "content": "Mirra Andreeva, một tay vợt trẻ người Nga, đã nhanh chóng vươn lên trong làng quần vợt thế giới, từ một tài năng trẻ trở thành một trong những tay vợt nữ hàng đầu. Cô nổi bật từ giữa năm 2023 và đạt được nhiều thành công ấn tượng trong mùa giải 2024, bao gồm chiến thắng trước những tên tuổi lớn như Ons Jabeur và Aryna Sabalenka. Bên cạnh tài năng trên sân, Andreeva còn nổi bật với sự điềm tĩnh và khả năng nghiên cứu đối thủ, cho thấy cô không chỉ là một thần đồng mà còn là một tay vợt có tiềm năng phát triển bền vững.",
+    "link": "https://vnexpress.net/hanh-trinh-andreeva-xe-mac-than-dong-quan-vot-4863771.html",
+    "cat": "the-thao",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Mirra Andreeva đã có những thành tích nào nổi bật trong quần vợt?",
+    "answers": [
+      {
+        "text": "Chiến thắng trước Ons Jabeur và Aryna Sabalenka",
+        "correct": true
+      },
+      {
+        "text": "Tham gia giải Grand Slam đầu tiên",
+        "correct": false
+      },
+      {
+        "text": "Được biết đến từ năm 2022",
+        "correct": false
+      },
+      {
+        "text": "Giành huy chương vàng Olympic",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "4 việc làm gây hại tim mạch trong mùa nắng nóng",
     "content": "Trong mùa nắng nóng, có bốn việc làm gây hại cho tim mạch mà mọi người cần tránh. Đó là tiếp xúc nhiệt cao đột ngột, uống nhiều rượu bia và cà phê, ăn mặn cùng thực phẩm chế biến sẵn, và lười vận động hoặc tập thể dục quá sức. Những hành động này có thể dẫn đến các vấn đề nghiêm trọng như đột quỵ, nhồi máu cơ tim và các triệu chứng như chóng mặt, khó thở.",
     "link": "https://vnexpress.net/4-viec-lam-gay-hai-tim-mach-trong-mua-nang-nong-4863752.html",
@@ -4779,33 +4864,6 @@
       },
       {
         "text": "Chơi thể thao ngoài trời, ăn nhiều trái cây, tránh đồ ngọt",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "5 cách bảo vệ thận",
-    "content": "Bài viết đề cập đến 5 cách bảo vệ thận, bao gồm việc uống đủ nước để loại bỏ độc tố, tránh uống rượu bia và thuốc lá, khám sức khỏe định kỳ, duy trì lối sống lành mạnh và hạn chế lượng muối tiêu thụ. Việc chăm sóc thận rất quan trọng để ngăn ngừa suy thận và các bệnh liên quan. Những biện pháp này giúp nâng cao sức khỏe thận và phòng ngừa các bệnh nghiêm trọng.",
-    "link": "https://vnexpress.net/5-cach-bao-ve-than-4864069.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Làm thế nào để bảo vệ sức khỏe thận hiệu quả?",
-    "answers": [
-      {
-        "text": "Uống đủ nước và không uống rượu bia.",
-        "correct": true
-      },
-      {
-        "text": "Tăng cường ăn mặn.",
-        "correct": false
-      },
-      {
-        "text": "Không cần kiểm tra sức khỏe định kỳ.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ cần tập thể dục một lần mỗi tháng.",
         "correct": false
       }
     ]
@@ -4842,28 +4900,28 @@
     ]
   },
   {
-    "title": "Hành trình Andreeva 'xé mác' thần đồng quần vợt",
-    "content": "Mirra Andreeva, một tay vợt trẻ người Nga, đã nhanh chóng vươn lên trong làng quần vợt thế giới, từ một tài năng trẻ trở thành một trong những tay vợt nữ hàng đầu. Cô nổi bật từ giữa năm 2023 và đạt được nhiều thành công ấn tượng trong mùa giải 2024, bao gồm chiến thắng trước những tên tuổi lớn như Ons Jabeur và Aryna Sabalenka. Bên cạnh tài năng trên sân, Andreeva còn nổi bật với sự điềm tĩnh và khả năng nghiên cứu đối thủ, cho thấy cô không chỉ là một thần đồng mà còn là một tay vợt có tiềm năng phát triển bền vững.",
-    "link": "https://vnexpress.net/hanh-trinh-andreeva-xe-mac-than-dong-quan-vot-4863771.html",
-    "cat": "the-thao",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Mirra Andreeva đã có những thành tích nào nổi bật trong quần vợt?",
+    "title": "5 cách bảo vệ thận",
+    "content": "Bài viết đề cập đến 5 cách bảo vệ thận, bao gồm việc uống đủ nước để loại bỏ độc tố, tránh uống rượu bia và thuốc lá, khám sức khỏe định kỳ, duy trì lối sống lành mạnh và hạn chế lượng muối tiêu thụ. Việc chăm sóc thận rất quan trọng để ngăn ngừa suy thận và các bệnh liên quan. Những biện pháp này giúp nâng cao sức khỏe thận và phòng ngừa các bệnh nghiêm trọng.",
+    "link": "https://vnexpress.net/5-cach-bao-ve-than-4864069.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Làm thế nào để bảo vệ sức khỏe thận hiệu quả?",
     "answers": [
       {
-        "text": "Chiến thắng trước Ons Jabeur và Aryna Sabalenka",
+        "text": "Uống đủ nước và không uống rượu bia.",
         "correct": true
       },
       {
-        "text": "Tham gia giải Grand Slam đầu tiên",
+        "text": "Tăng cường ăn mặn.",
         "correct": false
       },
       {
-        "text": "Được biết đến từ năm 2022",
+        "text": "Không cần kiểm tra sức khỏe định kỳ.",
         "correct": false
       },
       {
-        "text": "Giành huy chương vàng Olympic",
+        "text": "Chỉ cần tập thể dục một lần mỗi tháng.",
         "correct": false
       }
     ]
