--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "Elon Musk: 'Đừng đốt xe Tesla nữa, đừng điên nữa'",
+    "content": "Elon Musk đã kêu gọi nhân viên Tesla giữ cổ phiếu của công ty và không nên đốt xe Tesla trong bối cảnh cổ phiếu đã giảm 51% kể từ tháng 12-2024. Trong cuộc gặp với nhân viên, Musk bày tỏ sự thất vọng về những vụ phá hoại xe Tesla đang gia tăng và tuyên bố rằng tương lai của công ty vẫn rất tươi sáng. Ông cũng nhấn mạnh rằng doanh số bán hàng của Tesla hiện đang gặp khó khăn do các hoạt động chính trị và phản đối đối với ông.",
+    "link": "https://tuoitre.vn/elon-musk-dung-dot-xe-tesla-nua-dung-dien-nua-20250322093313088.htm",
+    "cat": "kinh-doanh",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Elon Musk đã kêu gọi nhân viên Tesla làm gì gần đây?",
+    "answers": [
+      {
+        "text": "Giữ cổ phiếu và không đốt xe Tesla",
+        "correct": true
+      },
+      {
+        "text": "Bán xe Tesla với giá thấp hơn",
+        "correct": false
+      },
+      {
+        "text": "Ngừng sản xuất xe điện",
+        "correct": false
+      },
+      {
+        "text": "Tham gia vào các cuộc biểu tình",
+        "correct": false
+      },
+      {
+        "text": "Thay đổi giám đốc điều hành của Tesla",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tổng Bí thư: Phát triển dữ liệu là cơ hội lịch sử để Việt Nam bứt phá",
     "content": "Tổng Bí thư Tô Lâm đã nhấn mạnh tầm quan trọng của việc phát triển dữ liệu trong thời đại số tại lễ ra mắt Hiệp hội Dữ liệu quốc gia. Ông cho rằng dữ liệu là tài nguyên thiết yếu cho kinh tế số và kêu gọi toàn xã hội tham gia vào nỗ lực này để Việt Nam có thể bứt phá. Hiệp hội Dữ liệu quốc gia có gần 400 hội viên và sẽ đóng vai trò kết nối các bên liên quan để phát triển hệ sinh thái dữ liệu tại Việt Nam.",
     "link": "https://tuoitre.vn/tong-bi-thu-phat-trien-du-lieu-la-co-hoi-lich-su-de-viet-nam-but-pha-2025032210510071.htm",
@@ -520,6 +551,37 @@
       },
       {
         "text": "Để đảm bảo quyền lợi cho các nhà đầu tư nước ngoài.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hàng trăm viên sỏi đóng thành khối trong mật người đàn ông",
+    "content": "Ông Mỹ, 64 tuổi, đã được phẫu thuật lấy hàng trăm viên sỏi mật sau khi bị đau bụng và vàng da. Siêu âm tại Bệnh viện Đa khoa Tâm Anh TP HCM cho thấy túi mật của ông chứa nhiều sỏi lớn. Bác sĩ đã cắt túi mật và lấy ra hàng trăm viên sỏi kích thước từ 2-5 mm. Sau phẫu thuật, sức khỏe của ông đã cải thiện đáng kể và ông xuất viện sau hai ngày.",
+    "link": "https://vnexpress.net/hang-tram-vien-soi-dong-thanh-khoi-trong-mat-nguoi-dan-ong-4864254.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Ông Mỹ đã gặp vấn đề gì liên quan đến sỏi mật?",
+    "answers": [
+      {
+        "text": "Ông bị đau bụng và vàng da do sỏi mật.",
+        "correct": true
+      },
+      {
+        "text": "Ông bị đau đầu và chóng mặt.",
+        "correct": false
+      },
+      {
+        "text": "Ông bị sốt cao và ho.",
+        "correct": false
+      },
+      {
+        "text": "Ông không có triệu chứng gì.",
+        "correct": false
+      },
+      {
+        "text": "Ông cảm thấy mệt mỏi và buồn nôn.",
         "correct": false
       }
     ]
@@ -1263,6 +1325,33 @@
     ]
   },
   {
+    "title": "Viêm xoang có di truyền không?",
+    "content": "Viêm xoang không phải là bệnh di truyền, nhưng một số yếu tố di truyền có thể làm tăng nguy cơ mắc bệnh. Các biến thể trong gene như TAS2R38 và ALOX15 có thể ảnh hưởng đến khả năng bảo vệ của xoang mũi và dẫn đến viêm xoang. Mặc dù không di truyền, nhưng môi trường sống và thói quen sinh hoạt của gia đình cũng có thể tạo điều kiện cho bệnh phát triển. Bệnh viêm xoang có thể được điều trị bằng nhiều phương pháp khác nhau, bao gồm thuốc và can thiệp y tế nếu cần.",
+    "link": "https://vnexpress.net/viem-xoang-co-di-truyen-khong-4864247.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Viêm xoang có di truyền không?",
+    "answers": [
+      {
+        "text": "Không, viêm xoang không di truyền nhưng có thể có yếu tố di truyền liên quan.",
+        "correct": true
+      },
+      {
+        "text": "Có, viêm xoang là bệnh di truyền từ cha mẹ sang con.",
+        "correct": false
+      },
+      {
+        "text": "Có thể di truyền trong một số trường hợp hiếm.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ ở những người sống trong cùng một môi trường.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Dấu hiệu liệt dây thần kinh số 7",
     "content": "Liệt dây thần kinh số 7, hay còn gọi là liệt mặt, có thể biểu hiện qua các triệu chứng như tê nhẹ hoặc cứng một bên mặt, khó khăn khi cười, và miệng kéo lệch khi nói hoặc ăn. Dây thần kinh số 7 điều khiển các cử động cơ mặt và liên quan đến cảm giác vị giác, tiết nước bọt và nước mắt. Nếu phát hiện sớm, điều trị trong vòng 72 giờ có thể giúp phục hồi chức năng hoàn toàn và giảm nguy cơ biến chứng. Các nguyên nhân gây liệt bao gồm nhiễm lạnh, nhiễm virus, và các bệnh lý viêm nhiễm.",
     "link": "https://vnexpress.net/dau-hieu-liet-day-than-kinh-so-7-4864394.html",
@@ -1289,33 +1378,6 @@
       },
       {
         "text": "Đau bụng dưới",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Viêm xoang có di truyền không?",
-    "content": "Viêm xoang không phải là bệnh di truyền, nhưng một số yếu tố di truyền có thể làm tăng nguy cơ mắc bệnh. Các biến thể trong gene như TAS2R38 và ALOX15 có thể ảnh hưởng đến khả năng bảo vệ của xoang mũi và dẫn đến viêm xoang. Mặc dù không di truyền, nhưng môi trường sống và thói quen sinh hoạt của gia đình cũng có thể tạo điều kiện cho bệnh phát triển. Bệnh viêm xoang có thể được điều trị bằng nhiều phương pháp khác nhau, bao gồm thuốc và can thiệp y tế nếu cần.",
-    "link": "https://vnexpress.net/viem-xoang-co-di-truyen-khong-4864247.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Viêm xoang có di truyền không?",
-    "answers": [
-      {
-        "text": "Không, viêm xoang không di truyền nhưng có thể có yếu tố di truyền liên quan.",
-        "correct": true
-      },
-      {
-        "text": "Có, viêm xoang là bệnh di truyền từ cha mẹ sang con.",
-        "correct": false
-      },
-      {
-        "text": "Có thể di truyền trong một số trường hợp hiếm.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ ở những người sống trong cùng một môi trường.",
         "correct": false
       }
     ]
@@ -1781,6 +1843,64 @@
     ]
   },
   {
+    "title": "Xuyên đêm nấu ăn, khiêu vũ cùng người lạ",
+    "content": "Bài viết giới thiệu về một không gian sinh hoạt chung mang tên The Airy Space ở Hà Nội, nơi mà những người trẻ có thể giao lưu, nấu ăn, khiêu vũ và chia sẻ với nhau. Mai Hoa, Triệu Vy và nhiều người khác đã tham gia các hoạt động này, tìm thấy cảm giác an toàn và thân thuộc mặc dù chưa quen biết nhau. Di Trần, người tổ chức, cho biết mục đích là tạo ra một nơi kết nối cho những ai cần giao lưu và giảm áp lực trong cuộc sống. Xu hướng này phản ánh nhu cầu giải tỏa cảm xúc và tìm kiếm sự đồng cảm trong xã hội hiện đại.",
+    "link": "https://vnexpress.net/xuyen-dem-nau-an-khieu-vu-cung-nguoi-la-4863287.html",
+    "cat": "gia-dinh",
+    "positivity": 9,
+    "importance": 7,
+    "question": "The Airy Space là nơi tổ chức hoạt động gì cho người trẻ?",
+    "answers": [
+      {
+        "text": "Nấu ăn và khiêu vũ cùng người lạ",
+        "correct": true
+      },
+      {
+        "text": "Chỉ tổ chức các buổi tiệc sinh nhật",
+        "correct": false
+      },
+      {
+        "text": "Chỉ dành cho những người đã quen biết nhau",
+        "correct": false
+      },
+      {
+        "text": "Tổ chức các buổi hội thảo chuyên đề",
+        "correct": false
+      },
+      {
+        "text": "Chỉ dành cho những người lớn tuổi",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đóng bảo hiểm 30 năm, nghỉ hưu trước tuổi được hưởng chế độ ra sao?",
+    "content": "Bài viết giải đáp thắc mắc của một viên chức đã đóng bảo hiểm 30 năm và muốn nghỉ hưu trước tuổi theo nghị định 178/2024/NĐ-CP. Theo luật sư Nguyễn Hồng Linh, người này đủ điều kiện để nghỉ hưu trước tuổi và sẽ được hưởng đầy đủ lương hưu mà không bị trừ tỉ lệ do nghỉ hưu sớm. Ngoài ra, họ còn được hưởng các khoản trợ cấp khác theo quy định của pháp luật về bảo hiểm xã hội.",
+    "link": "https://tuoitre.vn/dong-bao-hiem-30-nam-nghi-huu-truoc-tuoi-duoc-huong-che-do-ra-sao-20250313135630462.htm",
+    "cat": "phap-luat",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Người đóng bảo hiểm 30 năm nghỉ hưu trước tuổi có được hưởng chế độ gì không?",
+    "answers": [
+      {
+        "text": "Có, họ sẽ được hưởng đầy đủ lương hưu và các khoản trợ cấp khác.",
+        "correct": true
+      },
+      {
+        "text": "Không, họ sẽ không được hưởng lương hưu.",
+        "correct": false
+      },
+      {
+        "text": "Họ chỉ được hưởng một phần lương hưu.",
+        "correct": false
+      },
+      {
+        "text": "Họ phải chờ đến tuổi nghỉ hưu mới được hưởng lương hưu.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Lúa chết vì khô hạn, nông dân phải cắt cho bò ăn",
     "content": "Khô hạn kéo dài tại Gia Lai đã khiến gần 50 ha lúa của người dân bị thiệt hại nặng nề, buộc họ phải cắt lúa để làm thức ăn cho bò. Ông Tônh và nhiều nông dân khác đang phải tìm cách cứu mùa màng bằng việc bơm nước từ giếng, nhưng nước ngày càng cạn kiệt. Tình trạng này không chỉ xảy ra ở Gia Lai mà còn lan rộng sang các tỉnh khác như Kon Tum, nơi khoảng 380 ha lúa và cây trồng khác cũng bị ảnh hưởng nghiêm trọng do thiếu nước tưới.",
     "link": "https://vnexpress.net/lua-chet-vi-kho-han-nong-dan-phai-cat-cho-bo-an-4858759.html",
@@ -1888,64 +2008,6 @@
       },
       {
         "text": "Để thể hiện sự tự tin hơn trong diễn xuất.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Xuyên đêm nấu ăn, khiêu vũ cùng người lạ",
-    "content": "Bài viết giới thiệu về một không gian sinh hoạt chung mang tên The Airy Space ở Hà Nội, nơi mà những người trẻ có thể giao lưu, nấu ăn, khiêu vũ và chia sẻ với nhau. Mai Hoa, Triệu Vy và nhiều người khác đã tham gia các hoạt động này, tìm thấy cảm giác an toàn và thân thuộc mặc dù chưa quen biết nhau. Di Trần, người tổ chức, cho biết mục đích là tạo ra một nơi kết nối cho những ai cần giao lưu và giảm áp lực trong cuộc sống. Xu hướng này phản ánh nhu cầu giải tỏa cảm xúc và tìm kiếm sự đồng cảm trong xã hội hiện đại.",
-    "link": "https://vnexpress.net/xuyen-dem-nau-an-khieu-vu-cung-nguoi-la-4863287.html",
-    "cat": "gia-dinh",
-    "positivity": 9,
-    "importance": 7,
-    "question": "The Airy Space là nơi tổ chức hoạt động gì cho người trẻ?",
-    "answers": [
-      {
-        "text": "Nấu ăn và khiêu vũ cùng người lạ",
-        "correct": true
-      },
-      {
-        "text": "Chỉ tổ chức các buổi tiệc sinh nhật",
-        "correct": false
-      },
-      {
-        "text": "Chỉ dành cho những người đã quen biết nhau",
-        "correct": false
-      },
-      {
-        "text": "Tổ chức các buổi hội thảo chuyên đề",
-        "correct": false
-      },
-      {
-        "text": "Chỉ dành cho những người lớn tuổi",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Đóng bảo hiểm 30 năm, nghỉ hưu trước tuổi được hưởng chế độ ra sao?",
-    "content": "Bài viết giải đáp thắc mắc của một viên chức đã đóng bảo hiểm 30 năm và muốn nghỉ hưu trước tuổi theo nghị định 178/2024/NĐ-CP. Theo luật sư Nguyễn Hồng Linh, người này đủ điều kiện để nghỉ hưu trước tuổi và sẽ được hưởng đầy đủ lương hưu mà không bị trừ tỉ lệ do nghỉ hưu sớm. Ngoài ra, họ còn được hưởng các khoản trợ cấp khác theo quy định của pháp luật về bảo hiểm xã hội.",
-    "link": "https://tuoitre.vn/dong-bao-hiem-30-nam-nghi-huu-truoc-tuoi-duoc-huong-che-do-ra-sao-20250313135630462.htm",
-    "cat": "phap-luat",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Người đóng bảo hiểm 30 năm nghỉ hưu trước tuổi có được hưởng chế độ gì không?",
-    "answers": [
-      {
-        "text": "Có, họ sẽ được hưởng đầy đủ lương hưu và các khoản trợ cấp khác.",
-        "correct": true
-      },
-      {
-        "text": "Không, họ sẽ không được hưởng lương hưu.",
-        "correct": false
-      },
-      {
-        "text": "Họ chỉ được hưởng một phần lương hưu.",
-        "correct": false
-      },
-      {
-        "text": "Họ phải chờ đến tuổi nghỉ hưu mới được hưởng lương hưu.",
         "correct": false
       }
     ]
@@ -3439,33 +3501,6 @@
     ]
   },
   {
-    "title": "Bị ung thư phổi giai đoạn nào cần hóa trị?",
-    "content": "Ung thư phổi giai đoạn hai có thể được điều trị bằng hóa trị, tùy thuộc vào tình trạng sức khỏe tổng thể và đặc điểm khối u của bệnh nhân. Hóa trị có thể thực hiện trước hoặc sau phẫu thuật nhằm giảm kích thước khối u hoặc loại bỏ tế bào ung thư còn sót lại. Nếu bệnh ở giai đoạn tiến triển, hóa trị sẽ là phương pháp điều trị chính để giảm triệu chứng và kéo dài thời gian sống. Để có phác đồ điều trị chính xác, bệnh nhân cần được bác sĩ khám và xét nghiệm kỹ lưỡng.",
-    "link": "https://vnexpress.net/bi-ung-thu-phoi-giai-doan-nao-can-hoa-tri-4864117.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Bị ung thư phổi giai đoạn hai thì có cần hóa trị không?",
-    "answers": [
-      {
-        "text": "Có, thường cần hóa trị để hỗ trợ điều trị.",
-        "correct": true
-      },
-      {
-        "text": "Không, chỉ cần theo dõi triệu chứng.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ cần thuốc uống.",
-        "correct": false
-      },
-      {
-        "text": "Không cần hóa trị nếu không có triệu chứng.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Phụ nữ tiền mãn kinh ăn gì cân bằng nội tiết?",
     "content": "Phụ nữ trong giai đoạn tiền mãn kinh thường gặp nhiều triệu chứng khó chịu như mất ngủ, mệt mỏi và bốc hỏa. Để cân bằng nội tiết tố, chế độ dinh dưỡng đóng vai trò quan trọng. Các thực phẩm giàu phytoestrogen như hạt lanh và đậu nành, canxi và vitamin D từ rau lá xanh và sữa, chất xơ từ ngũ cốc và trái cây, cũng như chất béo lành mạnh từ cá béo và hạt chia có thể hỗ trợ giảm triệu chứng. Ngoài ra, bổ sung các tinh chất thiên nhiên cũng giúp cải thiện tình trạng sức khỏe của phụ nữ trong giai đoạn này.",
     "link": "https://vnexpress.net/phu-nu-tien-man-kinh-an-gi-can-bang-noi-tiet-4864193.html",
@@ -3488,6 +3523,33 @@
       },
       {
         "text": "Thực phẩm chế biến sẵn",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bị ung thư phổi giai đoạn nào cần hóa trị?",
+    "content": "Ung thư phổi giai đoạn hai có thể được điều trị bằng hóa trị, tùy thuộc vào tình trạng sức khỏe tổng thể và đặc điểm khối u của bệnh nhân. Hóa trị có thể thực hiện trước hoặc sau phẫu thuật nhằm giảm kích thước khối u hoặc loại bỏ tế bào ung thư còn sót lại. Nếu bệnh ở giai đoạn tiến triển, hóa trị sẽ là phương pháp điều trị chính để giảm triệu chứng và kéo dài thời gian sống. Để có phác đồ điều trị chính xác, bệnh nhân cần được bác sĩ khám và xét nghiệm kỹ lưỡng.",
+    "link": "https://vnexpress.net/bi-ung-thu-phoi-giai-doan-nao-can-hoa-tri-4864117.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Bị ung thư phổi giai đoạn hai thì có cần hóa trị không?",
+    "answers": [
+      {
+        "text": "Có, thường cần hóa trị để hỗ trợ điều trị.",
+        "correct": true
+      },
+      {
+        "text": "Không, chỉ cần theo dõi triệu chứng.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ cần thuốc uống.",
+        "correct": false
+      },
+      {
+        "text": "Không cần hóa trị nếu không có triệu chứng.",
         "correct": false
       }
     ]
