Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Alcaraz thua sốc trận đầu Miami Mở rộng",
+    "content": "Carlos Alcaraz, hạt giống số hai, đã gây bất ngờ khi thua David Goffin sau khi thắng set đầu tiên 7-5, nhưng sau đó để thua 4-6, 3-6 trong trận mở màn Miami Mở rộng hôm 21/3. Goffin, tuy đã 34 tuổi, vẫn thể hiện phong độ ấn tượng và đánh bại Alcaraz một lần nữa. Trận thua này khiến Alcaraz trải qua hai tuần tệ hại tại Mỹ, đồng thời làm giảm cơ hội tích lũy điểm số của anh trong mùa giải này.",
+    "link": "https://vnexpress.net/alcaraz-thua-soc-tran-dau-miami-mo-rong-4864500.html",
+    "cat": "the-thao",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao Alcaraz lại thua David Goffin ở Miami Mở rộng?",
+    "answers": [
+      {
+        "text": "Vì Alcaraz thua hai set sau khi thắng set đầu",
+        "correct": true
+      },
+      {
+        "text": "Vì Alcaraz bị chấn thương",
+        "correct": false
+      },
+      {
+        "text": "Vì Goffin chơi tốt hơn",
+        "correct": false
+      },
+      {
+        "text": "Vì Alcaraz không tập trung",
+        "correct": false
+      },
+      {
+        "text": "Vì Alcaraz không thích sân cứng",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Elon Musk: 'Đừng đốt xe Tesla nữa, đừng điên nữa'",
     "content": "Elon Musk đã kêu gọi nhân viên Tesla giữ cổ phiếu của công ty và không nên đốt xe Tesla trong bối cảnh cổ phiếu đã giảm 51% kể từ tháng 12-2024. Trong cuộc gặp với nhân viên, Musk bày tỏ sự thất vọng về những vụ phá hoại xe Tesla đang gia tăng và tuyên bố rằng tương lai của công ty vẫn rất tươi sáng. Ông cũng nhấn mạnh rằng doanh số bán hàng của Tesla hiện đang gặp khó khăn do các hoạt động chính trị và phản đối đối với ông.",
     "link": "https://tuoitre.vn/elon-musk-dung-dot-xe-tesla-nua-dung-dien-nua-20250322093313088.htm",
