--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Điểm mới trong \"Anh trai say hi\" đêm thứ 5, nhiều khán giả rơi nước mắt",
+    "content": "Đêm thứ 5 của concert \"Anh trai say hi\" diễn ra vào tối 21/3 tại Vạn Phúc City (TPHCM) đã mang đến những bất ngờ và cảm xúc mạnh mẽ cho khán giả. Chương trình mở màn với bản mashup các hit nổi tiếng của Alan Walker, tiếp theo là những màn trình diễn sáng tạo từ các nghệ sĩ. Đặc biệt, ca khúc \"Bao lời con chưa nói\" đã gây xúc động mạnh khi trình chiếu hình ảnh kỷ niệm của 200 khán giả bên bố mẹ, khiến nhiều người rơi nước mắt. MC Trấn Thành chia sẻ cảm xúc của mình và khuyến khích khán giả nên thường xuyên nói lời cảm ơn gia đình.",
+    "link": "https://dantri.com.vn/giai-tri/diem-moi-trong-anh-trai-say-hi-dem-thu-5-nhieu-khan-gia-roi-nuoc-mat-20250322113443696.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Điều gì khiến khán giả xúc động trong đêm thứ 5 của \"Anh trai say hi\"?",
+    "answers": [
+      {
+        "text": "Ca khúc \"Bao lời con chưa nói\" với hình ảnh kỷ niệm của khán giả",
+        "correct": true
+      },
+      {
+        "text": "Màn trình diễn của DJ Alan Walker",
+        "correct": false
+      },
+      {
+        "text": "Sự xuất hiện của các nghệ sĩ nổi tiếng",
+        "correct": false
+      },
+      {
+        "text": "Bầu không khí cuồng nhiệt của sự kiện",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Chiến thuật của NATO không thể đánh bại quân đội Nga ở Ukraine",
     "content": "Bài viết phân tích sự thay đổi chiến thuật của quân đội Nga trong cuộc xung đột với Ukraine, cho rằng các phương pháp của NATO đã không mang lại hiệu quả cho lực lượng Ukraine. Mặc dù Ukraine đã áp dụng một số chiến thuật của NATO, nhưng thực tế chiến đấu cho thấy cách đánh này không phù hợp với cuộc chiến hiện đại, nơi quân đội Nga có nhiều ưu thế về hỏa lực và công nghệ. Nga đã điều chỉnh chiến thuật để sử dụng các nhóm nhỏ tấn công, thay vì các đoàn xe bọc thép lớn, điều này đã giúp họ đạt được thành công trong nhiều trận đánh.",
     "link": "https://dantri.com.vn/the-gioi/chien-thuat-cua-nato-khong-the-danh-bai-quan-doi-nga-o-ukraine-20250322111242064.htm",
@@ -2071,28 +2098,28 @@
     ]
   },
   {
-    "title": "Lúa chết vì khô hạn, nông dân phải cắt cho bò ăn",
-    "content": "Khô hạn kéo dài tại Gia Lai đã khiến gần 50 ha lúa của người dân bị thiệt hại nặng nề, buộc họ phải cắt lúa để làm thức ăn cho bò. Ông Tônh và nhiều nông dân khác đang phải tìm cách cứu mùa màng bằng việc bơm nước từ giếng, nhưng nước ngày càng cạn kiệt. Tình trạng này không chỉ xảy ra ở Gia Lai mà còn lan rộng sang các tỉnh khác như Kon Tum, nơi khoảng 380 ha lúa và cây trồng khác cũng bị ảnh hưởng nghiêm trọng do thiếu nước tưới.",
-    "link": "https://vnexpress.net/lua-chet-vi-kho-han-nong-dan-phai-cat-cho-bo-an-4858759.html",
-    "cat": "thoi-su",
-    "positivity": 2,
-    "importance": 8,
-    "question": "Tại sao nông dân ở Gia Lai phải cắt lúa cho bò ăn?",
+    "title": "Đóng bảo hiểm 30 năm, nghỉ hưu trước tuổi được hưởng chế độ ra sao?",
+    "content": "Bài viết giải đáp thắc mắc của một viên chức đã đóng bảo hiểm 30 năm và muốn nghỉ hưu trước tuổi theo nghị định 178/2024/NĐ-CP. Theo luật sư Nguyễn Hồng Linh, người này đủ điều kiện để nghỉ hưu trước tuổi và sẽ được hưởng đầy đủ lương hưu mà không bị trừ tỉ lệ do nghỉ hưu sớm. Ngoài ra, họ còn được hưởng các khoản trợ cấp khác theo quy định của pháp luật về bảo hiểm xã hội.",
+    "link": "https://tuoitre.vn/dong-bao-hiem-30-nam-nghi-huu-truoc-tuoi-duoc-huong-che-do-ra-sao-20250313135630462.htm",
+    "cat": "phap-luat",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Người đóng bảo hiểm 30 năm nghỉ hưu trước tuổi có được hưởng chế độ gì không?",
     "answers": [
       {
-        "text": "Do khô hạn khiến lúa chết",
+        "text": "Có, họ sẽ được hưởng đầy đủ lương hưu và các khoản trợ cấp khác.",
         "correct": true
       },
       {
-        "text": "Vì lúa bị sâu bệnh",
+        "text": "Không, họ sẽ không được hưởng lương hưu.",
         "correct": false
       },
       {
-        "text": "Do thời tiết quá lạnh",
+        "text": "Họ chỉ được hưởng một phần lương hưu.",
         "correct": false
       },
       {
-        "text": "Vì không có giống lúa tốt",
+        "text": "Họ phải chờ đến tuổi nghỉ hưu mới được hưởng lương hưu.",
         "correct": false
       }
     ]
@@ -2214,28 +2241,28 @@
     ]
   },
   {
-    "title": "Đóng bảo hiểm 30 năm, nghỉ hưu trước tuổi được hưởng chế độ ra sao?",
-    "content": "Bài viết giải đáp thắc mắc của một viên chức đã đóng bảo hiểm 30 năm và muốn nghỉ hưu trước tuổi theo nghị định 178/2024/NĐ-CP. Theo luật sư Nguyễn Hồng Linh, người này đủ điều kiện để nghỉ hưu trước tuổi và sẽ được hưởng đầy đủ lương hưu mà không bị trừ tỉ lệ do nghỉ hưu sớm. Ngoài ra, họ còn được hưởng các khoản trợ cấp khác theo quy định của pháp luật về bảo hiểm xã hội.",
-    "link": "https://tuoitre.vn/dong-bao-hiem-30-nam-nghi-huu-truoc-tuoi-duoc-huong-che-do-ra-sao-20250313135630462.htm",
-    "cat": "phap-luat",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Người đóng bảo hiểm 30 năm nghỉ hưu trước tuổi có được hưởng chế độ gì không?",
+    "title": "Lúa chết vì khô hạn, nông dân phải cắt cho bò ăn",
+    "content": "Khô hạn kéo dài tại Gia Lai đã khiến gần 50 ha lúa của người dân bị thiệt hại nặng nề, buộc họ phải cắt lúa để làm thức ăn cho bò. Ông Tônh và nhiều nông dân khác đang phải tìm cách cứu mùa màng bằng việc bơm nước từ giếng, nhưng nước ngày càng cạn kiệt. Tình trạng này không chỉ xảy ra ở Gia Lai mà còn lan rộng sang các tỉnh khác như Kon Tum, nơi khoảng 380 ha lúa và cây trồng khác cũng bị ảnh hưởng nghiêm trọng do thiếu nước tưới.",
+    "link": "https://vnexpress.net/lua-chet-vi-kho-han-nong-dan-phai-cat-cho-bo-an-4858759.html",
+    "cat": "thoi-su",
+    "positivity": 2,
+    "importance": 8,
+    "question": "Tại sao nông dân ở Gia Lai phải cắt lúa cho bò ăn?",
     "answers": [
       {
-        "text": "Có, họ sẽ được hưởng đầy đủ lương hưu và các khoản trợ cấp khác.",
+        "text": "Do khô hạn khiến lúa chết",
         "correct": true
       },
       {
-        "text": "Không, họ sẽ không được hưởng lương hưu.",
+        "text": "Vì lúa bị sâu bệnh",
         "correct": false
       },
       {
-        "text": "Họ chỉ được hưởng một phần lương hưu.",
+        "text": "Do thời tiết quá lạnh",
         "correct": false
       },
       {
-        "text": "Họ phải chờ đến tuổi nghỉ hưu mới được hưởng lương hưu.",
+        "text": "Vì không có giống lúa tốt",
         "correct": false
       }
     ]
@@ -5066,37 +5093,6 @@
     ]
   },
   {
-    "title": "Làm gì cắt cơn ho mà không dùng thuốc?",
-    "content": "Ho dai dẳng có thể gây khó chịu, đặc biệt là vào ban đêm. Để giảm triệu chứng ho mà không cần dùng thuốc, một số phương pháp tự nhiên và thảo dược có thể được áp dụng. Bài viết đề xuất những cách thức hiệu quả để giúp cắt cơn ho mà vẫn an toàn cho sức khỏe.",
-    "link": "https://vnexpress.net/lam-gi-cat-con-ho-ma-khong-dung-thuoc-4864094.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Có những cách nào để giảm cơn ho mà không cần thuốc?",
-    "answers": [
-      {
-        "text": "Sử dụng thảo dược và phương pháp tự nhiên",
-        "correct": true
-      },
-      {
-        "text": "Uống thuốc ho",
-        "correct": false
-      },
-      {
-        "text": "Sử dụng kháng sinh",
-        "correct": false
-      },
-      {
-        "text": "Ngủ nhiều hơn",
-        "correct": false
-      },
-      {
-        "text": "Hạn chế ăn uống",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Nguy cơ viêm khớp sau chấn thương",
     "content": "Viêm khớp sau chấn thương là một tình trạng khá phổ biến và thường tự hồi phục sau 2-3 tháng. Tuy nhiên, trong một số trường hợp, tình trạng này có thể kéo dài hoặc phát triển nặng hơn, gây ra nhiều biến chứng nghiêm trọng như nhiễm trùng khớp hay teo cơ. Các triệu chứng của viêm khớp bao gồm đau nhức, sưng, và khó cử động, do đó người bệnh cần thăm khám kịp thời để được điều trị thích hợp.",
     "link": "https://vnexpress.net/nguy-co-viem-khop-sau-chan-thuong-4864110.html",
@@ -5123,6 +5119,37 @@
       },
       {
         "text": "Chỉ vài ngày",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Làm gì cắt cơn ho mà không dùng thuốc?",
+    "content": "Ho dai dẳng có thể gây khó chịu, đặc biệt là vào ban đêm. Để giảm triệu chứng ho mà không cần dùng thuốc, một số phương pháp tự nhiên và thảo dược có thể được áp dụng. Bài viết đề xuất những cách thức hiệu quả để giúp cắt cơn ho mà vẫn an toàn cho sức khỏe.",
+    "link": "https://vnexpress.net/lam-gi-cat-con-ho-ma-khong-dung-thuoc-4864094.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Có những cách nào để giảm cơn ho mà không cần thuốc?",
+    "answers": [
+      {
+        "text": "Sử dụng thảo dược và phương pháp tự nhiên",
+        "correct": true
+      },
+      {
+        "text": "Uống thuốc ho",
+        "correct": false
+      },
+      {
+        "text": "Sử dụng kháng sinh",
+        "correct": false
+      },
+      {
+        "text": "Ngủ nhiều hơn",
+        "correct": false
+      },
+      {
+        "text": "Hạn chế ăn uống",
         "correct": false
       }
     ]
@@ -5181,33 +5208,6 @@
       },
       {
         "text": "12 người",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tesla lại triệu hồi bán tải điện Cybertruck vì bung tấm ốp",
-    "content": "Tesla đã phải triệu hồi gần như toàn bộ số xe Cybertruck tại Mỹ do tấm ốp thân xe có nguy cơ bị bung ra khi xe đang chạy. Đợt triệu hồi này áp dụng cho hơn 46.000 xe sản xuất từ tháng 11/2023 đến tháng 2/2025, đánh dấu lần triệu hồi thứ 8 của mẫu xe này. Nguyên nhân là do tấm ốp ngoài bằng thép không gỉ có thể gây nguy hiểm khi vận hành, mặc dù Tesla cho biết không có tai nạn hay thương tích nào liên quan đến vấn đề này.",
-    "link": "https://vnexpress.net/tesla-lai-trieu-hoi-ban-tai-dien-cybertruck-vi-bung-tam-op-4864077.html",
-    "cat": "oto-xe-may",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Tại sao Tesla lại triệu hồi bán tải Cybertruck?",
-    "answers": [
-      {
-        "text": "Vì tấm ốp thân xe có nguy cơ bị bung ra khi xe đang chạy.",
-        "correct": true
-      },
-      {
-        "text": "Vì vấn đề về động cơ.",
-        "correct": false
-      },
-      {
-        "text": "Vì lỗi phần mềm.",
-        "correct": false
-      },
-      {
-        "text": "Vì hệ thống phanh không hoạt động.",
         "correct": false
       }
     ]
